--- a/OnlineAssessmentApplication/Content/Site.css
+++ b/OnlineAssessmentApplication/Content/Site.css
@@ -131,8 +131,29 @@ textarea {
     font-weight: 500;
 }
 
+
     .passcode-btn:hover {
         text-decoration: none;
         cursor: pointer;
         color: #fff;
+    }
+.back-btn {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    color: #343a40;
+    text-decoration: none;
+    min-height: 1rem;
+    min-width: 8rem;
+    padding: 0.5rem 0.8rem;
+    border-top-right-radius: 0.3125rem;
+    border-bottom-right-radius: 0.3125rem;
+    height: 2.5625rem;
+    font-weight: 500;
+}
+
+    .back-btn:hover {
+        text-decoration: none;
+        cursor: pointer;
+        
     }
