--- a/OnlineAssessmentApplication/Views/Shared/_Layout.cshtml
+++ b/OnlineAssessmentApplication/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-      
+
         <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
             <ul class="navbar-nav">
                 <li class="nav-item active">
@@ -31,7 +31,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact admin</a>
                 </li>
-    
+
                 <li class="nav-item dropdown">
                     @if (HttpContext.Current.User.Identity.IsAuthenticated)
                     {
@@ -41,8 +41,8 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 
-                            <a class="dropdown-item" href="#">Edit profile</a>
-                            <a class="dropdown-item" href="#">Change password</a>
+                            <a class="dropdown-item" href="/account/ChangeProfile">Edit profile</a>
+                            <a class="dropdown-item" href="/account/ChangePassword">Change password</a>
 
                             <a class="dropdown-item" href="/account/logout">Logout</a>
                         </div>
@@ -62,16 +62,15 @@
             <div class="col-sm-4 col-lg-2 ">
                 @if (HttpContext.Current.User.IsInRole("Student"))
                 {
-                <div class="list-group sideBar">
-                    <a href="/student/index" class="list-group-item list-group-item-action">
-                        <i class="fas fa-home"></i> Dashboard
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-book icon"></i> Courses</a>
-                    <a href="/student/upcomingtest" class="list-group-item list-group-item-action"><i class="fas fa-star icon"></i> Upcoming Tests</a>
-                    <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-trophy icon"></i> Overall Report</a>
-                    <a href="/account/logout" class="list-group-item list-group-item-action"><i class="fas fa-sign-out-alt icon"></i> Logout</a>
-
-                </div>
+                    <div class="list-group sideBar">
+                        <a href="/student/index" class="list-group-item list-group-item-action">
+                            <i class="fas fa-home"></i> Dashboard
+                        </a>
+                        <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-book icon"></i> Courses</a>
+                        <a href="/test/upcomingtest" class="list-group-item list-group-item-action"><i class="fas fa-star icon"></i> Upcoming Tests</a>
+                        <a href="/Test/ViewScore" class="list-group-item list-group-item-action"><i class="fas fa-trophy icon"></i> Overall Report</a>
+                        <a href="/account/logout" class="list-group-item list-group-item-action"><i class="fas fa-sign-out-alt icon"></i> Logout</a>
+                    </div>
                 }
                 else if (HttpContext.Current.User.IsInRole("Teacher"))
                 {
@@ -80,9 +79,9 @@
                             <i class="fas fa-home icon"></i> Dashboard
                         </a>
                         <a href="/Test/CreateTest" class="list-group-item list-group-item-action"><i class="far fa-plus-square icon"></i> Create Test</a>
-                        <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-share-square icon"></i> Get Approval</a>
+                        <a href="/test/upcomingtest" class="list-group-item list-group-item-action"><i class="fas fa-share-square icon"></i> Get Approval</a>
 
-                        <a href="/student/upcomingtest" class="list-group-item list-group-item-action"><i class="far fa-calendar-check icon"></i> Schedule Tests</a>
+                        <a href="#" class="list-group-item list-group-item-action"><i class="far fa-calendar-check icon"></i> Schedule Tests</a>
                         <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-trophy icon"></i> View Overall Students Report</a>
                         <a href="/account/logout" class="list-group-item list-group-item-action"><i class="fas fa-sign-out-alt icon"></i> Logout</a>
 
@@ -92,7 +91,7 @@
                 {
                     <div class="list-group sideBar">
                         <a href="/student/index" class="list-group-item list-group-item-action"><i class="fas fa-home icon"></i> Dashboard</a>
-                        <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-check-double icon"></i> Give approval</a>
+                        <a href="/Test/UpcomingTest" class="list-group-item list-group-item-action"><i class="fas fa-check-double icon"></i> Give approval</a>
                         <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-trophy icon"></i> View Overall Students Report</a>
                         <a href="/account/logout" class="list-group-item list-group-item-action"><i class="fas fa-sign-out-alt icon"></i> Logout</a>
 
@@ -100,25 +99,25 @@
                 }
                 else
                 {
-            <div class="list-group sideBar">
-                <a href="/student/index" class="list-group-item list-group-item-action"><i class="fas fa-home icon"></i> Dashboard</a>
-                <a href="/account/Create" class="list-group-item list-group-item-action"><i class="fas fa-user-plus icon"></i> Add user</a>
-                <a href="/account/Display" class="list-group-item list-group-item-action"><i class="fas fa-eye icon"></i> Display all users</a>
-                <a href="/account/logout" class="list-group-item list-group-item-action"><i class="fas fa-sign-out-alt icon"></i> Logout</a>
-            </div>
+                    <div class="list-group sideBar">
+                        <a href="/student/index" class="list-group-item list-group-item-action"><i class="fas fa-home icon"></i> Dashboard</a>
+                        <a href="/account/Create" class="list-group-item list-group-item-action"><i class="fas fa-user-plus icon"></i> Add user</a>
+                        <a href="/account/Display" class="list-group-item list-group-item-action"><i class="fas fa-eye icon"></i> Display all users</a>
+                        <a href="/account/logout" class="list-group-item list-group-item-action"><i class="fas fa-sign-out-alt icon"></i> Logout</a>
+                    </div>
                 }
             </div>
-            
-                
-
-                <div class="col-lg-10 login_page">
-                    @RenderBody()
 
 
-                </div>
+
+            <div class="col-lg-10 login_page">
+                @RenderBody()
+                @RenderSection("scripts", required: false)
+
             </div>
         </div>
+    </div>
 
 
-    </body>
+</body>
 </html>
